# SemUPS

Client/: constants.py  main.py
server/: CMakeLists.txt
server/.cache/clangd/index/: User.h.40508123F73DD2C3.idx  main.cpp.8CF5AAA5C684E45B.idx  messages.h.202B0A1AC84012E8.idx  server.cpp.391BA7532A1E540A.idx  server.h.2F7310C2964102E3.idx
server/src/: main.cpp  messages.h  server.cpp  server.h
